volexc/tests/ui/parse_unexpected_token.out
Error: found '}' expected '?', or ':'
   ╭─[ parse_unexpected_token.vol:4:1 ]
   │
 4 │ }
   │ ┬  
   │ ╰── Unexpected '}'
   │ 
   │ Note: Expected one of: '?', ':'
───╯